unpackaged/main/default/objects/Fund__c/fields/Dissolution_Date__c.field-meta.xml
<CustomField>
    <fullName>Dissolution_Date__c</fullName>
    <label>Dissolution Date</label>
    <type>Date</type>
</CustomField>