unpackaged/main/default/objects/Fund__c/fields/Final_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Closing_Date__c</fullName>
    <label>Final Closing Date</label>
    <type>Date</type>
</CustomField>