unpackaged/main/default/objects/Fund__c/fields/Fund_Type__c.field-meta.xml
<CustomField>
    <fullName>Fund_Type__c</fullName>
    <label>Fund Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fund</fullName>
            </value>
            <value>
                <fullName>Fund of Funds</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>