unpackaged/main/default/objects/Fund__c/fields/Investment_Category__c.field-meta.xml
<CustomField>
    <fullName>Investment_Category__c</fullName>
    <label>Investment Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Fund_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Co-investment</fullName>
            </value>
            <value>
                <fullName>Fund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>