unpackaged/main/default/objects/Fund__c/fields/Investment_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Investment_Period_End_Date__c</fullName>
    <label>Investment Period End Date</label>
    <type>Date</type>
</CustomField>