unpackaged/main/default/objects/Fund__c/fields/Last_Touchpoint_ID__c.field-meta.xml
<CustomField>
    <fullName>Last_Touchpoint_ID__c</fullName>
    <label>Last Touchpoint ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>