unpackaged/main/default/objects/Fund__c/fields/Remaining_Commitments_USD_mn__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Commitments_USD_mn__c</fullName>
    <formula>Target_Commitments_USD_mn__c  - Total_Commitments_USD_mn__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Commitments (mn)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>