unpackaged/main/default/objects/Fund__c/fields/Step_Down_Date__c.field-meta.xml
<CustomField>
    <fullName>Step_Down_Date__c</fullName>
    <label>Step Down Date</label>
    <type>Date</type>
</CustomField>