unpackaged/main/default/objects/Fund__c/fields/Target_Commitments_USD_mn__c.field-meta.xml
<CustomField>
    <fullName>Target_Commitments_USD_mn__c</fullName>
    <label>Target Commitments (mn)</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>