unpackaged/main/default/objects/Fund__c/fields/Total_Capital_Called__c.field-meta.xml
<CustomField>
    <fullName>Total_Capital_Called__c</fullName>
    <label>Total Capital Called</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>