unpackaged/main/default/objects/Fund__c/fields/Total_Capital_Called_mn__c.field-meta.xml
<CustomField>
    <fullName>Total_Capital_Called_mn__c</fullName>
    <formula>Total_Capital_Called__c /1000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Capital Called (mn)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>