unpackaged/main/default/objects/Fund__c/fields/Total_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Total_Commitment__c</fullName>
    <label>Total Commitment</label>
    <summarizedField>Partnership__c.Total_Commitments_USD_mn__c</summarizedField>
    <summaryForeignKey>Partnership__c.Fund__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>