unpackaged/main/default/objects/Fund__c/fields/Total_Commitments__c.field-meta.xml
<CustomField>
    <fullName>Total_Commitments__c</fullName>
    <label>Total Commitments</label>
    <summarizedField>Partnership__c.Total_Commitments__c</summarizedField>
    <summaryForeignKey>Partnership__c.Fund__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>