unpackaged/main/default/objects/Fund__c/fields/Total_Recallable_Capital__c.field-meta.xml
<CustomField>
    <fullName>Total_Recallable_Capital__c</fullName>
    <label>Total Recallable Capital</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>