unpackaged/main/default/objects/Fund__c/fields/Total_Recallable_Capital_mn__c.field-meta.xml
<CustomField>
    <fullName>Total_Recallable_Capital_mn__c</fullName>
    <formula>Total_Recallable_Capital__c / 1000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Recallable Capital (mn)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>