unpackaged/main/default/objects/Fund__c/fields/Vintage_Year__c.field-meta.xml
<CustomField>
    <fullName>Vintage_Year__c</fullName>
    <label>Vintage Year</label>
    <length>20</length>
    <type>Text</type>
</CustomField>