unpackaged/main/default/objects/Fund__c/fields/X1st_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>X1st_Closing_Date__c</fullName>
    <label>1st Closing Date</label>
    <type>Date</type>
</CustomField>