unpackaged/main/default/objects/Fund__c/fields/X2nd_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Closing_Date__c</fullName>
    <label>2nd Closing Date</label>
    <type>Date</type>
</CustomField>