unpackaged/main/default/objects/Fund__c/fields/X3rd_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Closing_Date__c</fullName>
    <label>3rd Closing Date</label>
    <type>Date</type>
</CustomField>