unpackaged/main/default/objects/Fund__c/fields/X4th_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>X4th_Closing_Date__c</fullName>
    <label>4th Closing Date</label>
    <type>Date</type>
</CustomField>