unpackaged/main/default/objects/Fund__c/fields/X5th_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>X5th_Closing_Date__c</fullName>
    <label>5th Closing Date</label>
    <type>Date</type>
</CustomField>