unpackaged/main/default/objects/Fund__c/fields/X6th_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>X6th_Closing_Date__c</fullName>
    <label>6th Closing Date</label>
    <type>Date</type>
</CustomField>