unpackaged/main/default/objects/Fund__c/validationRules/FundType_InvestmentCategory_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>FundType_InvestmentCategory_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISPICKVAL(Investment_Category__c, &quot;Fund&quot;)), ISPICKVAL(Fund_Type__c, &quot;Fund of Funds&quot;))</errorConditionFormula>
    <errorDisplayField>Investment_Category__c</errorDisplayField>
    <errorMessage>You should select Fund while selecting Fund Type as Fund of Funds.</errorMessage>
</ValidationRule>