unpackaged/main/default/objects/Fund__c/validationRules/Prevent_FundCategory_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_FundCategory_Change</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Investment_Category__c )</errorConditionFormula>
    <errorDisplayField>Investment_Category__c</errorDisplayField>
    <errorMessage>Cannot change this value once set.</errorMessage>
</ValidationRule>