unpackaged/main/default/objects/Fund__c/validationRules/Prevent_FundType_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_FundType_Change</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Fund_Type__c)</errorConditionFormula>
    <errorDisplayField>Fund_Type__c</errorDisplayField>
    <errorMessage>Cannot change this value once set.</errorMessage>
</ValidationRule>