unpackaged/main/default/objects/Fund__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Investment_Category__c</columns>
    <columns>Target_Commitments_USD_mn__c</columns>
    <columns>Total_Commitments_USD_mn__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>