unpackaged/main/default/objects/Fund__c/listViews/Fund_of_Funds.listView-meta.xml
<ListView>
    <fullName>Fund_of_Funds</fullName>
    <columns>NAME</columns>
    <columns>Investment_Category__c</columns>
    <columns>Fund_Type__c</columns>
    <columns>Target_Commitments_USD_mn__c</columns>
    <columns>Total_Commitments_USD_mn__c</columns>
    <columns>Remaining_Commitments_USD_mn__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fund_Type__c</field>
        <operation>equals</operation>
        <value>Fund of Funds</value>
    </filters>
    <label>Fund of Funds</label>
</ListView>