unpackaged/main/default/objects/Fund__c/listViews/PE_Fund.listView-meta.xml
<ListView>
    <fullName>PE_Fund</fullName>
    <columns>NAME</columns>
    <columns>Fund_Type__c</columns>
    <columns>Investment_Category__c</columns>
    <columns>Target_Commitments_USD_mn__c</columns>
    <columns>Total_Capital_Called_mn__c</columns>
    <columns>Remaining_Commitments_USD_mn__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fund_Type__c</field>
        <operation>equals</operation>
        <value>Fund</value>
    </filters>
    <label>Fund</label>
</ListView>